--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 -->
 <html>
 	<head>
-		<title>Breakout - Game Engines - NEU</title>
+		<title>Platformer - Game Engines - NEU</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
@@ -20,8 +20,8 @@
 				<!-- Header -->
 					<header id="header" class="alt">
 						<!-- <span class="logo"><img src="images/logo.svg" alt="" /></span> -->
-						<h1>Breakout</h1>
-						<p>A game by Roger Chen, Bingxuan Chen & Aaron Kanzer<br />
+						<h1>Platformer</h1>
+						<p>A game by Gaurav Kohli, Chaitali Ladikkar, Kavya Hanisha Gajula & Aaron Kanzer<br />
 						CS 4850 / 5850 - Northeastern University - Game Engines - Spring 2019</p>
 					</header>
 
@@ -29,7 +29,7 @@
 					<nav id="nav">
 						<ul>
 							<li><a href="#intro" class="active">Video Demo</a></li>
-							<li><a href="#first">Game Screenshots</a></li>
+							<li><a href="#first">Project Screenshots</a></li>
 							<li><a href="#second">Post Mortem Review</a></li>
 							<li><a href="./Docs/html/index.html" target="_blank">CLICK HERE FOR CODE DOCUMENTATION</a></li>
 						</ul>
@@ -61,23 +61,23 @@
 						<!-- First Section -->
 							<section id="first" class="main special">
 								<header class="major">
-									<h2>Game Screenshots</h2>
+									<h2>Project Screenshots</h2>
 								</header>
 								<ul class="features">
 									<li>
 										<span><img width="300" height="200" src="./images/multipleLevels_breakout.png"></span>
-										<h3><b>Multiple levels</b></h3>
-										<p>Our game has 3 levels of increasing difficulty!</p>
+										<h3><b>Tile Editor</b></h3>
+										<p>Allows user to decide tile type at each point in grid</p>
 									</li>
 									<li>
 											<span><img width="300" height="200" src="./images/multipleLanguage_breakout.png"></span>
-											<h3><b>Supports multiple languages</b></h3>
-										<p>The main menu allows you to choose English or Spanish as your language preference!</p>
+											<h3><b>Platformer Game</b></h3>
+										<p>User can play a platformer style game</p>
 									</li>
 									<li>
 										<span><img width="300" height="200" src="./images/physics_breakout.png"></span>
-										<h3><b>Built-in Math Library</b></h3>
-										<p>Experience physics like never before with our efficient math library!</p>
+										<h3><b>Sprite Editor</b></h3>
+										<p>Visualize what a character should look like while moving.</p>
 									</li>
 								</ul>
 							</section>
@@ -86,7 +86,7 @@
 							<section id="second" class="main special">
 								<header class="major">
 									<h2>Post Mortem Review</h2>
-									<h4>A Reflection On Our Process Of Making Breakout</h4>
+									<h4>A Reflection On Our Process Of Making Platformer</h4>
 								</header>
 								<p>Building Breakout was definitely an educational process. It was interesting to learn about how to use SDL, how to work with different types of media, and how to piece everything together as a team into one working project. 
 									</br></br>Setting up the project seemed to be the most challenging yet important aspect of the project. Making sure to keep track of our textures, surfaces, media files, objects, etc. in our Resource Manager was a difficult process; however,
