--- a/index.html
+++ b/index.html
@@ -65,17 +65,27 @@
 								</header>
 								<ul class="features">
 									<li>
-										<span><img width="300" height="200" src="./images/multipleLevels_breakout.png"></span>
-										<h3><b>Tile Editor</b></h3>
+										<span><img width="300" height="200" src="./images/ss1.png"></span>
+										<h3><b>Platformer Game 1</b></h3>
 										<p>Allows user to decide tile type at each point in grid</p>
 									</li>
+                                    <li>
+                                        <span><img width="300" height="200" src="./images/ss2.png"></span>
+                                        <h3><b>Platformer Game 2</b></h3>
+                                        <p>User can play a platformer style game</p>
+                                    </li>
+                                    <li>
+                                        <span><img width="300" height="200" src="./images/ss3.png"></span>
+                                        <h3><b>Platformer Game 3</b></h3>
+                                        <p>User can play a platformer style game</p>
+                                    </li>
+                                    <li>
+                                        <span><img width="300" height="200" src="./images/tileEditor.png"></span>
+                                        <h3><b>Tile Editor</b></h3>
+                                        <p>Create tile scenes for different levels.</p>
+                                    </li>
 									<li>
-											<span><img width="300" height="200" src="./images/multipleLanguage_breakout.png"></span>
-											<h3><b>Platformer Game</b></h3>
-										<p>User can play a platformer style game</p>
-									</li>
-									<li>
-										<span><img width="300" height="200" src="./images/spriteEditorScreenshot.png"></span>
+										<span><img width="300" height="200" src="./images/spriteEditor.png"></span>
 										<h3><b>Sprite Editor</b></h3>
 										<p>Visualize what a character should look like while moving.</p>
 									</li>
