--- a/index.html
+++ b/index.html
@@ -30,7 +30,8 @@
 						<ul>
 							<li><a href="#intro" class="active">Video Demo</a></li>
 							<li><a href="#first">Project Screenshots</a></li>
-							<li><a href="#second">Post Mortem Review</a></li>
+							<li><a href="#second">How to Play</a></li>
+							<li><a href="#third">Post Mortem Review</a></li>
 							<li><a href="./Docs/html/index.html" target="_blank">CLICK HERE FOR CODE DOCUMENTATION</a></li>
 						</ul>
 					</nav>
@@ -92,14 +93,35 @@
 								</ul>
 							</section>
 
+
 						<!-- Second Section -->
 							<section id="second" class="main special">
+								<header class="major">
+									<h2>How to Play</h2>
+									<h4>A guide on how to play the game</h4>
+								</header>
+								<p>
+									The character moves left and right using the arrow keys.</br>
+									The character can jump using the UP key.</br>
+									The character kicks enemies using the Spacebar.</br>
+									CHEAT: Pressing Tab button 6 times replaces the kick with a newspaper whack.</br>
+									</p>
+							</section>
+
+						<!-- Third Section -->
+							<section id="third" class="main special">
 								<header class="major">
 									<h2>Post Mortem Review</h2>
 									<h4>A Reflection On Our Process Of Making Platformer</h4>
 								</header>
 								<p>
-									</br></br></br></br>
+									Better graphics and animations.</br>
+									Slower and controller animations to make the look clearer.</br>
+									More special moves for the main character.</br>
+									More types of enemies.</br>
+									More modular rendering of enemies.</br>
+									Better jumps of the character.</br>
+									Better collision detections.</br>
 									</p>
 							</section>
 					</div>
