fixed youtube link

--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
 										</iframe> -->
 										<iframe style= "display: block;
 										margin-left: auto;
-										margin-right: auto;"  width="560" height="315" src="https://www.youtube.com/watch?v=Dex2g5ZJd-k" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+										margin-right: auto;"  width="560" height="315" src="https://www.youtube.com/embed/Dex2g5ZJd-k" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 									</div>
 								</div>
 							</section>
@@ -122,6 +122,7 @@
 									More modular rendering of enemies.</br>
 									Better jumps of the character.</br>
 									Better collision detections.</br>
+									Different sounds for moving or kicking or dying.</br>
 									</p>
 							</section>
 					</div>
