--- a/index.html
+++ b/index.html
@@ -30,11 +30,15 @@
 						<ul>
 							<li><a href="#intro" class="active">Video Demo</a></li>
 							<li><a href="#first">Project Screenshots</a></li>
-							<li><a href="#second">How to Play</a></li>
-							<li><a href="#third">Post Mortem Review</a></li>
+							<li><a href="#second">Ogre</a></li>
+							<li><a href="#third">Audio Library</a></li>
+							<li><a href="#fourth">Architecture</a></li>
+							<li><a href="#fifth">Post Mortem Review</a></li>
 							<li><a href="./Docs/html/index.html" target="_blank">CLICK HERE FOR CODE DOCUMENTATION</a></li>
 						</ul>
 					</nav>
+
+
 
 				<!-- Main -->
 					<div id="main">
@@ -97,7 +101,7 @@
 						<!-- Second Section -->
 							<section id="second" class="main special">
 								<header class="major">
-									<h2>How to Play</h2>
+									<h2>Ogre</h2>
 									<h4>A guide on how to play the game</h4>
 								</header>
 								<p>
@@ -111,7 +115,7 @@
 						<!-- Third Section -->
 							<section id="third" class="main special">
 								<header class="major">
-									<h2>Post Mortem Review</h2>
+									<h2>Audio Library</h2>
 									<h4>A Reflection On Our Process Of Making Platformer</h4>
 								</header>
 								<p>
@@ -125,6 +129,34 @@
 									Different sounds for moving or kicking or dying.</br>
 									</p>
 							</section>
+
+							<section id="fourth" class="main special">
+								<header class="major">
+									<h2>Architecture</h2>
+									<h4>A guide on how to play the game</h4>
+								</header>
+								<p>
+									The character moves left and right using the arrow keys.</br>
+									The character can jump using the UP key.</br>
+									The character kicks enemies using the Spacebar.</br>
+									CHEAT: Pressing Tab button 6 times replaces the kick with a newspaper whack.</br>
+									</p>
+							</section>
+
+
+							<section id="fifth" class="main special">
+								<header class="major">
+									<h2>Post Mortem Review</h2>
+									<h4>A guide on how to play the game</h4>
+								</header>
+								<p>
+									The character moves left and right using the arrow keys.</br>
+									The character can jump using the UP key.</br>
+									The character kicks enemies using the Spacebar.</br>
+									CHEAT: Pressing Tab button 6 times replaces the kick with a newspaper whack.</br>
+									</p>
+							</section>
+
 					</div>
 
 				<!-- Footer -->
