--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 -->
 <html>
 	<head>
-		<title>Platformer - Game Engines - NEU</title>
+		<title>Game Engines - NEU</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
@@ -20,8 +20,8 @@
 				<!-- Header -->
 					<header id="header" class="alt">
 						<!-- <span class="logo"><img src="images/logo.svg" alt="" /></span> -->
-						<h1>Platformer</h1>
-						<p>A game by Gaurav Kohli, Chaitali Ladikkar, Kavya Hanisha Gajula & Aaron Kanzer<br />
+						<h1>OGRE Audio Plugin</h1>
+						<p>A game by Gaurav Kohli, Chaitali Ladikkar & Kavya Hanisha Gajula<br />
 						CS 4850 / 5850 - Northeastern University - Game Engines - Spring 2019</p>
 					</header>
 
@@ -71,12 +71,12 @@
 								<ul class="features">
 									<li>
 										<span><img width="300" height="200" src="./images/ss1.png"></span>
-										<h3><b>Platformer Game 1</b></h3>
-										<p>Allows user to decide tile type at each point in grid</p>
+										<h3><b>Sample browser</b></h3>
+										<p>Allows user to run and play games rendered in OGRE</p>
 									</li>
                                     <li>
                                         <span><img width="300" height="200" src="./images/ss2.png"></span>
-                                        <h3><b>Platformer Game 2</b></h3>
+                                        <h3><b>Audio Library UI</b></h3>
                                         <p>User can play a platformer style game</p>
                                     </li>
                                     <li>
