--- a/index.html
+++ b/index.html
@@ -75,21 +75,21 @@
 									<li>
 										<span><img width="300" height="200" src="./images/ogre.png"></span>
 										<h3><b>Sample browser</b></h3>
-										<p>Allows user to run and play games rendered in OGRE</p>
+										<p>Allows user to run and play graphic actions rendered in OGRE</p>
 									</li>
                                     <li>
                                         <span><img width="300" height="200" src="./images/ss2.png"></span>
-                                        <h3><b>Audio Library UI</b></h3>
-                                        <p>User can play a platformer style game</p>
+                                        <h3><b>Behaviour Tree Generator</b></h3>
+                                        <p>User can input Commands in UI to create C++ and Python code </p>
                                     </li>
                                     <li>
                                         <span><img width="300" height="200" src="./images/ss3.png"></span>
-                                        <h3><b>Platformer Game 3</b></h3>
-                                        <p>User can play a platformer style game</p>
+                                        <h3><b>Behaviour Tree Visualization</b></h3>
+                                        <p></p>
                                     </li>
                                     <li>
                                         <span><img width="300" height="200" src="./images/tileEditor.png"></span>
-                                        <h3><b>Tile Editor</b></h3>
+                                        <h3><b>Game created using Behaviour Tree</b></h3>
                                         <p>Create tile scenes for different levels.</p>
                                     </li>
 									<li>
