--- a/index.html
+++ b/index.html
@@ -78,12 +78,13 @@
 										<p>Allows user to run and play graphic actions rendered in OGRE</p>
 									</li>
                                     <li>
-                                        <span><img width="300" height="200" src="./images/ss2.png"></span>
+                                        <span><img width="300" height="200" src="./images/GUI.png"></span>
                                         <h3><b>Behaviour Tree Generator</b></h3>
                                         <p>User can input Commands in UI to create C++ and Python code </p>
                                     </li>
                                     <li>
-                                        <span><img width="300" height="200" src="./images/ss3.png"></span>
+
+                                        <span><img width="300" height="200" src="images/tree.png"></span>
                                         <h3><b>Behaviour Tree Visualization</b></h3>
                                         <p></p>
                                     </li>
