--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
                                     </li>
                                     <li>
 
-                                        <span><img width="300" height="200" src="images/tree.png"></span>
+                                        <span><img width="300" height="200" src="./images/tree.png"></span>
                                         <h3><b>Behaviour Tree Visualization</b></h3>
                                         <p></p>
                                     </li>
