--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
 										</iframe> -->
 										<iframe style= "display: block;
 										margin-left: auto;
-										margin-right: auto;"  width="560" height="315" src="https://www.youtube.com/embed/Dex2g5ZJd-k" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+										margin-right: auto;"  width="560" height="315" src="https://youtu.be/lXGMQU4koLA" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 									</div>
 								</div>
 							</section>
@@ -151,8 +151,11 @@
 								<header class="major">
 									<h2>Audio Library</h2>
 									<h4>using OpenAL</h4>
+
 								</header>
 								<p>
+									<span><img width="500" height="250" src="./images/AudioEnum.png"></span>
+
 									The character moves left and right using the arrow keys.</br>
 									The character can jump using the UP key.</br>
 									The character kicks enemies using the Spacebar.</br>
