--- a/index.html
+++ b/index.html
@@ -59,9 +59,7 @@
 										margin-right: auto;
 										width: 60%;" width="600" height="345" src="https://youtu.be/Dex2g5ZJd-k">
 										</iframe> -->
-										<iframe style= "display: block;
-										margin-left: auto;
-										margin-right: auto;"  width="560" height="315" src="https://youtu.be/lXGMQU4koLA" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+										<iframe width="560" height="315" src="https://www.youtube.com/embed/lXGMQU4koLA" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 									</div>
 								</div>
 							</section>
