--- a/index.html
+++ b/index.html
@@ -87,16 +87,7 @@
                                         <h3><b>Behaviour Tree Visualization</b></h3>
                                         <p></p>
                                     </li>
-                                    <li>
-                                        <span><img width="300" height="200" src="./images/tileEditor.png"></span>
-                                        <h3><b>Game created using Behaviour Tree</b></h3>
-                                        <p>Create tile scenes for different levels.</p>
-                                    </li>
-									<li>
-										<span><img width="300" height="200" src="./images/spriteEditor.png"></span>
-										<h3><b>Sprite Editor</b></h3>
-										<p>Visualize what a character should look like while moving.</p>
-									</li>
+
 								</ul>
 							</section>
 
@@ -124,7 +115,7 @@
 
 								</header>
 								<p>
-									<span><img width="300" height="200" src="./images/tileEditor.png"></span>
+									<span><img width="300" height="200" src="./images/uml.png"></span>
 
 									Better graphics and animations.</br>
 									To test simple selector and to test simple sequence.</br>
